@@ -67,10 +67,11 @@ scapegoat <- function(R0, a0, x,krit=NULL) {
 #'
 #' @param E \code{editmatrix} or \code{editset} as generated by the \code{editrules} package.
 #' @param dat \code{data.frame} with the data to be corrected
+#' @param ... arguments to be passed to other methods.
 #' @param fixate \code{character} with variable names that should not be changed.
 #' @param delta tolerance on checking for rounding error
 #' @param K number of trials per record. See details
-#' @param round should the solution be a rounded, default TRUE
+#' @param round should the solution be rounded, default TRUE
 #' @param assumeUnimodularity If \code{FALSE}, a test is performed before corrections are computed (expensive).
 #' @return A \code{\link[=deducorrect-object]{deducorrrect}} object.
 #' @seealso \code{\link{deducorrect-object}} \code{\link{status}}
@@ -81,19 +82,23 @@ correctRounding <- function(E, dat, ...){
 }
 
 
+
+#' @method correctRounding editset
+#' @rdname correctRounding
+#' @export
 correctRounding.editset <- function(E, dat, ...){
     v1 <- violatedEdits(E,dat)
     d1 <- correctRounding.editmatrix(E$num, dat,...)
     v2 <- violatedEdits(E,dat)
     k <- apply(!v1 & v2,1,any)
-    if ( any(k) ) d1 <- revertCorrections(d1,k)
+    if ( any(k) ) d1 <- revert(d1,rows=k)
     d1
 }   
 
-#'
 #' @method correctRounding editmatrix
-#' @rdname correctRounding 
-correctRounding.editmatrix <- function(E, dat, fixate=NULL, delta=2, K=10, round=TRUE, assumeUnimodularity=FALSE){
+#' @rdname correctRounding
+#' @export
+correctRounding.editmatrix <- function(E, dat, fixate=NULL, delta=2, K=10, round=TRUE, assumeUnimodularity=FALSE,...){
    stopifnot(is.data.frame(dat))
    R <- E
    krit <- character(0)
@@ -117,7 +122,7 @@ correctRounding.editmatrix <- function(E, dat, fixate=NULL, delta=2, K=10, round
    R <- getA(R)
   
    if (!assumeUnimodularity){
-      if (!isTotallyUnimodular(R)) stop("The equality matrix R should be totally unimodular. ", R)
+      if (!isTotallyUnimodular(R)) stop("The system of equalities must be totally unimodular. ", R)
    }
    
    m <- as.matrix(dat[vars])
