@@ -108,6 +108,7 @@ getSignCorrection <- function( r, A1, C1, eps, A2, C2, epsvec, flip, swap, w,
 #'
 #' @param E An object of class \code{\link[editrules:editmatrix]{editmatrix}}
 #' @param dat \code{data.frame}, the records to correct.
+#' @param ... arguments to be passed to other methods.
 #' @param flip A \code{character} vector of variable names who's values may be sign-flipped
 #' @param swap A \code{list} of \code{character} 2-vectors of variable combinations who's values may be swapped
 #' @param maxActions The maximum number of flips and swaps that may be performed
@@ -136,7 +137,28 @@ getSignCorrection <- function( r, A1, C1, eps, A2, C2, epsvec, flip, swap, w,
 #' Report 08015, Netherlands.
 #' @seealso \code{\link{deducorrect-object}}
 #' @export
-correctSigns <- function(
+correctSigns <- function(E,dat, ...){
+    UseMethod("correctSigns")
+}
+
+#'
+#' @method correctSigns editset
+#' @rdname correctSigns
+#' @export
+correctSigns.editset <- function(E, dat, ...){
+    v1 <- violatedEdits(E,dat)
+    d1 <- correctSigns.editmatrix(E$num, dat,...)
+    v2 <- violatedEdits(E,dat)
+    k <- apply(!v1 & v2,1,any)
+    if ( any(k) ) d1 <- revert(d1,rows=k)
+    d1
+}   
+
+
+#' @method correctSigns editmatrix
+#' @rdname correctSigns
+#' @export
+correctSigns.editmatrix <- function(
     E, 
     dat,
     flip = getVars(E),
@@ -145,7 +167,8 @@ correctSigns <- function(
     maxCombinations = 1e5,
     eps=sqrt(.Machine$double.eps),
     weight = rep(1,length(flip)+length(swap)),
-    fixate = NA){
+    fixate = NA,
+    ...){
 
     ops <- getOps(E)
     if ( !isNormalized(E) ) E <- normalize(E)
